--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,13 @@
 <html>
+    <head>
+        <meta charset="UTF-8">
+    </head>
   <body>
-    <h1>Hello Extensions</h1>
+    <h1>Dominant Color Extension</h1>
+    <button id="run-btn">
+        <i class="fa-solid fa-play"></i> Run
+    </button>
+    <script src="dist/scripts/run.js">
+    </script>
   </body>
 </html>
